--- a/res/layout/activity_sensor.xml
+++ b/res/layout/activity_sensor.xml
@@ -82,9 +82,18 @@
 				        android:layout_width="fill_parent"
 				        android:layout_height="wrap_content"
 				        android:text="Stop Time: " />
-				
 				    
-				                    
+				    <TextView
+				        android:id="@+id/AveSpeed"
+				        android:layout_width="fill_parent"
+				        android:layout_height="wrap_content"/>
+				    
+				    <TextView
+				        android:id="@+id/TotalDist"
+				        android:layout_width="fill_parent"
+				        android:layout_height="wrap_content"/>
+				    
+				                
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/tab4"
