--- a/res/layout/activity_main_page.xml
+++ b/res/layout/activity_main_page.xml
@@ -93,41 +93,33 @@
 				        android:layout_width="fill_parent"
 				        android:layout_height="wrap_content"/>
 
-				    <RelativeLayout
+				    <LinearLayout
 				        android:layout_width="match_parent"
-				        android:layout_height="match_parent" >
+				        android:layout_height="wrap_content" 
+				        android:orientation="vertical">
 
 				        <Button
 				            android:id="@+id/PersonalData"
-				            android:layout_width="wrap_content"
+				            android:layout_width="match_parent"
 				            android:layout_height="wrap_content"
-				            android:layout_alignParentBottom="true"
-				            android:layout_alignParentLeft="true"
-				            android:layout_alignParentRight="true"
 				            android:text="Personal Data" 
 				            android:onClick="personalData"/>
 
 				        <Button
 				            android:id="@+id/History"
-				            android:layout_width="wrap_content"
+				            android:layout_width="match_parent"
 				            android:layout_height="wrap_content"
-				            android:layout_above="@+id/PersonalData"
-				            android:layout_alignParentLeft="true"
-				            android:layout_alignParentRight="true"
 				            android:text="History" 
 				            android:onClick="history"/>
 
 				        <Button
 				            android:id="@+id/Schedule"
-				            android:layout_width="wrap_content"
+				            android:layout_width="match_parent"
 				            android:layout_height="wrap_content"
-				            android:layout_above="@+id/History"
-				            android:layout_alignParentLeft="true"
-				            android:layout_alignParentRight="true"
 				            android:text="Schedule" 
 				            android:onClick="schedule"/>
 
-				    </RelativeLayout>
+				    </LinearLayout>
 				                
                 </LinearLayout>
                 <LinearLayout
