--- a/res/layout/activity_main_page.xml
+++ b/res/layout/activity_main_page.xml
@@ -93,33 +93,42 @@
 				        android:layout_width="fill_parent"
 				        android:layout_height="wrap_content"/>
 
-				    <LinearLayout
-				        android:layout_width="match_parent"
-				        android:layout_height="wrap_content" 
+				    <RelativeLayout
+				        android:layout_width="fill_parent"
+				        android:layout_height="fill_parent" 
 				        android:orientation="vertical">
 
 				        <Button
 				            android:id="@+id/PersonalData"
-				            android:layout_width="match_parent"
+				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:text="Personal Data" 
-				            android:onClick="personalData"/>
+				            android:layout_alignParentBottom="true"
+				            android:layout_alignParentLeft="true"
+				            android:layout_alignParentRight="true"
+				            android:onClick="personalData"
+				            android:text="Personal Data" />
 
 				        <Button
 				            android:id="@+id/History"
-				            android:layout_width="match_parent"
+				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:text="History" 
-				            android:onClick="history"/>
+				            android:layout_above="@+id/PersonalData"
+				            android:layout_alignParentLeft="true"
+				            android:layout_alignParentRight="true"
+				            android:onClick="history"
+				            android:text="History" />
 
 				        <Button
 				            android:id="@+id/Schedule"
-				            android:layout_width="match_parent"
+				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:text="Schedule" 
-				            android:onClick="schedule"/>
+				            android:layout_above="@+id/History"
+				            android:layout_alignParentLeft="true"
+				            android:layout_alignParentRight="true"
+				            android:onClick="schedule"
+				            android:text="Schedule" />
 
-				    </LinearLayout>
+				    </RelativeLayout>
 				                
                 </LinearLayout>
                 <LinearLayout
