--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,6 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
@@ -9,7 +12,8 @@
         android:id="@+id/imageViewMainLogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
-        android:src="@drawable/aol_500"/>
+        android:src="@drawable/aol_500"
+        android:contentDescription="@string/login_offline"/>
 
     <Button
         android:id="@+id/buttonGoogleLogin"
